[project]
name = "arxiv-mcp-ng"
version = "0.1.0"
description = "MCP for interacting with arxiv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "arxiv2md>=0.1.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.scripts]
arxiv-mcp-ng = "server:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
